Included a Phone number entry

--- a/signup.html
+++ b/signup.html
@@ -293,6 +293,17 @@
                         required
                     />
                 </div>
+                <label for="floatingInput">Phone Number:</label>
+                <div class="form-floating">
+                    <input
+                        name="phone"
+                        type="number"
+                        class="form-control"
+                        id="floatingPassword"
+                        placeholder="Phone Number: "
+                        required
+                    />
+                </div>
 
                 <button class="btn btn-primary w-100 py-2" type="submit">
                     Sign Me Up!
